--- a/src/Main.css
+++ b/src/Main.css
@@ -1,5 +1,6 @@
 main {
-  width: 320px;
+  width: 100%;
+  height: 80vh;
   background: #FFF;
   box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.02);
   border-radius: 2px;
