--- a/src/Main.css
+++ b/src/Main.css
@@ -1,6 +1,6 @@
 main {
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   background: #FFF;
   box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.02);
   border-radius: 2px;
@@ -41,7 +41,7 @@ main form .input-block label {
 }
 
 main form .input-block input {
-  width: 100%;
+  width: 97%;
   height: 32px;
   font-size: 14px;
   color: #666;
@@ -50,7 +50,7 @@ main form .input-block input {
 }
 
 main form button[type=submit] {
-  width: 100%;
+  width: 97%;
   border: 0;
   margin-top: 30px;
   background: #7d40e7;
@@ -65,4 +65,14 @@ main form button[type=submit] {
 
 main form button[type=submit]:hover {
   background: #6931ca;
+}
+
+#chat {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-end;
+  width: 100%;
+  height: 100%;
+  padding: 30px 0;
+  position: relative;
 }
