--- a/src/global.css
+++ b/src/global.css
@@ -16,6 +16,6 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-body, input, button {
+body, input, button, p {
   font-family: Roboto, sans-serif;
 }
