--- a/src/Main.css
+++ b/src/Main.css
@@ -47,9 +47,28 @@ main form .input-block input {
   color: #666;
   border: 0;
   border-bottom: 1px solid #eee;
+  margin-bottom: 8px;
 }
 
 main form button[type=submit] {
+  width: 97%;
+  border: 0;
+  margin-top: 30px;
+  background: #7d40e7;
+  border-radius: 2px;
+  padding: 15px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  cursor: pointer;
+  transition: background 0.5s;
+}
+
+main form button[type=button]:hover {
+  background: #6931ca;
+}
+
+main form button[type=button] {
   width: 97%;
   border: 0;
   margin-top: 30px;
