--- a/src/components/ChatForm/styles.css
+++ b/src/components/ChatForm/styles.css
@@ -4,3 +4,75 @@
     width: 100%;
     padding-bottom: 30px;
 }
+
+form {
+    margin-top: 30px;
+  }
+  
+  form .input-block + .input-block {
+    margin-top: 20px;
+  }
+  
+  form .input-group {
+    margin-top: 20px;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+  }
+  
+  form .input-group .input-block {
+    margin-top: 0;
+  }
+  
+  form .input-block label {
+    color: #ACACAC;
+    font-size: 14px;
+    font-weight: bold;
+    display: block;
+  }
+  
+  form .input-block input {
+    width: 97%;
+    height: 32px;
+    font-size: 14px;
+    color: #666;
+    border: 0;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 8px;
+  }
+  
+  form button[type=submit] {
+    width: 97%;
+    border: 0;
+    margin-top: 30px;
+    background: #7d40e7;
+    border-radius: 2px;
+    padding: 15px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    cursor: pointer;
+    transition: background 0.5s;
+  }
+  
+  form button[type=button]:hover {
+    background: #6931ca;
+  }
+  
+  form button[type=button] {
+    width: 97%;
+    border: 0;
+    margin-top: 30px;
+    background: #7d40e7;
+    border-radius: 2px;
+    padding: 15px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    cursor: pointer;
+    transition: background 0.5s;
+  }
+  
+  form button[type=submit]:hover {
+    background: #6931ca;
+  }
